--- a/tribute_stylesheet.css
+++ b/tribute_stylesheet.css
@@ -25,7 +25,7 @@ text-align: center;
 font-family: Arial Black, Arial, Verdana, Serif;
 position: relative;
 top: 110px;
-margin-left: 131px;
+/*margin-left: 131px;*/
 	
 }
 
@@ -37,7 +37,7 @@ font-family: Arial Black, Arial, Verdana, Serif;
 font-size: 19px;
 position: relative;
 top: 130px;
-margin-left: 260px;
+/*margin-left: 260px;*/
 	
 }
 
