--- a/tribute_normalize.css
+++ b/tribute_normalize.css
@@ -1,3 +1,13 @@
+.container {
+	
+	position: relative;
+	width: 100%;
+	max-width: 960px;
+	margin: 0 auto;
+	padding: 0 20px;
+	box-sizing: border-box;
+}
+
 @media (min-width: 400px) {
 	
 .container {
